--- a/clash_build_log.html
+++ b/clash_build_log.html
@@ -4,47 +4,71 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>09-10-2023 at 17:52.59</u><br />
-Build ended on: <u>09-10-2023 at 17:53.03</u><p />
+Build started on: <u>09-10-2023 at 19:49.29</u><br />
+Build ended on: <u>09-10-2023 at 19:49.43</u><p />
 <b>-------------- Build: Debug in clash (compiler: NOT FOR PROJECTS! = MinGW GCC + Strict + Fast + Save (Requires Git))---------------</b><br />
-g++git-auto.bat "D:\проекты и другое\clash-main1\main.cpp" -o bin\Debug\clash.exe -mwindows  -Wall -fexceptions  -g  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC<br />
+g++git-auto.bat "D:\пономарёв александр\clashofclans-main\main.cpp" -o bin\Debug\clash.exe -mwindows  -Wall -fexceptions  -g  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC<br />
 ------------------------------------------------------------------------------------------------------<br />
 Compilation ERRORS:<br />
 <br />
-D:\проекты и другое\clash-main1\main.cpp: In constructor 'Button::Button()':<br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:2:8: warning: 'Button::x' should be initialized in the member initialization list [-Weffc++]</font><br />
+D:\пономарёв александр\clashofclans-main\main.cpp: In constructor 'Button::Button()':<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:2:8: warning: 'Button::x' should be initialized in the member initialization list [-Weffc++]</font><br />
  struct Button<br />
         ^<br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:2:8: warning: 'Button::name' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:2:8: warning: 'Button::category' should be initialized in the member initialization list [-Weffc++]</font><br />
-D:\проекты и другое\clash-main1\main.cpp: In function 'int main()':<br />
-D:\проекты и другое\clash-main1\main.cpp:65:25: note: synthesized method 'Button::Button()' first required here <br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:2:8: warning: 'Button::name' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:2:8: warning: 'Button::category' should be initialized in the member initialization list [-Weffc++]</font><br />
+D:\пономарёв александр\clashofclans-main\main.cpp: In function 'int main()':<br />
+D:\пономарёв александр\clashofclans-main\main.cpp:64:25: note: synthesized method 'Button::Button()' first required here <br />
      Button btn[count_btn];<br />
                          ^<br />
-D:\проекты и другое\clash-main1\main.cpp: In constructor 'Picture::Picture()':<br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:30:8: warning: 'Picture::x' should be initialized in the member initialization list [-Weffc++]</font><br />
+D:\пономарёв александр\clashofclans-main\main.cpp: In constructor 'Picture::Picture()':<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::x' should be initialized in the member initialization list [-Weffc++]</font><br />
  struct Picture<br />
         ^<br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:30:8: warning: 'Picture::y' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:30:8: warning: 'Picture::pic' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:30:8: warning: 'Picture::w_scr' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:30:8: warning: 'Picture::h_scr' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:30:8: warning: 'Picture::w' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:30:8: warning: 'Picture::h' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:30:8: warning: 'Picture::visible' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:30:8: warning: 'Picture::category' should be initialized in the member initialization list [-Weffc++]</font><br />
-D:\проекты и другое\clash-main1\main.cpp: In function 'int main()':<br />
-D:\проекты и другое\clash-main1\main.cpp:69:30: note: synthesized method 'Picture::Picture()' first required here <br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::y' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::pic' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::w_scr' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::h_scr' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::w' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::h' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::visible' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::category' should be initialized in the member initialization list [-Weffc++]</font><br />
+D:\пономарёв александр\clashofclans-main\main.cpp: In function 'int main()':<br />
+D:\пономарёв александр\clashofclans-main\main.cpp:68:30: note: synthesized method 'Picture::Picture()' first required here <br />
      Picture menuPic[count_pic];<br />
                               ^<br />
-<font color="#0000ff">D:\проекты и другое\clash-main1\main.cpp:175:1: warning: stack usage might be unbounded [-Wstack-usage=]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:145:33: warning: suggest braces around empty body in an 'if' statement [-Wempty-body]</font><br />
+             centrPic[i].visible);<br />
+                                 ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:178:48: warning: logical 'or' applied to non-boolean constant [-Wlogical-op]</font><br />
+             if (GetAsyncKeyState (VK_OEM_PLUS) || (VK_ADD))<br />
+                                                ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:180:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+                 centrPic[vybor].w_scr = centrPic[vybor].w_scr * 1.1;<br />
+                                                               ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:181:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+                 centrPic[vybor].h_scr = centrPic[vybor].h_scr * 1.1;<br />
+                                                               ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:184:49: warning: logical 'or' applied to non-boolean constant [-Wlogical-op]</font><br />
+             if (GetAsyncKeyState (VK_OEM_MINUS) || (VK_SUBTRACT))<br />
+                                                 ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:186:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+                 centrPic[vybor].w_scr = centrPic[vybor].w_scr * 0.9;<br />
+                                                               ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:187:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+                 centrPic[vybor].h_scr = centrPic[vybor].h_scr * 0.9;<br />
+                                                               ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:77:10: warning: variable 'mouse_click' set but not used [-Wunused-but-set-variable]</font><br />
+     bool mouse_click = false;<br />
+          ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:209:1: warning: stack usage might be unbounded [-Wstack-usage=]</font><br />
  }<br />
  ^<br />
 ------------------------------------------------------------------------------------------------------<br />
-Autosaving to the Git repository in D:/  /clash-main1/.git-auto/... <br />
+Autosaving to the Git repository in D:/ /clashofclans-main/.git-auto/... <br />
 Output size is 2,26 MB<br />
-<font color="#0000ff">Process terminated with status 0 (0 minutes, 4 seconds)</font><br />
-<font color="#0000ff">0 errors, 13 warnings (0 minutes, 4 seconds)</font><br />
+<font color="#0000ff">Process terminated with status 0 (0 minutes, 13 seconds)</font><br />
+<font color="#0000ff">0 errors, 21 warnings (0 minutes, 13 seconds)</font><br />
 </tt>
 </body>
 </html>
