--- a/clash_build_log.html
+++ b/clash_build_log.html
@@ -4,8 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>09-10-2023 at 19:49.29</u><br />
-Build ended on: <u>09-10-2023 at 19:49.43</u><p />
+Build started on: <u>13-10-2023 at 19:46.50</u><br />
+Build ended on: <u>13-10-2023 at 19:47.04</u><p />
 <b>-------------- Build: Debug in clash (compiler: NOT FOR PROJECTS! = MinGW GCC + Strict + Fast + Save (Requires Git))---------------</b><br />
 g++git-auto.bat "D:\пономарёв александр\clashofclans-main\main.cpp" -o bin\Debug\clash.exe -mwindows  -Wall -fexceptions  -g  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC<br />
 ------------------------------------------------------------------------------------------------------<br />
@@ -37,38 +37,32 @@ D:\пономарёв александр\clashofclans-main\main.cpp: In function
 D:\пономарёв александр\clashofclans-main\main.cpp:68:30: note: synthesized method 'Picture::Picture()' first required here <br />
      Picture menuPic[count_pic];<br />
                               ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:145:33: warning: suggest braces around empty body in an 'if' statement [-Wempty-body]</font><br />
-             centrPic[i].visible);<br />
-                                 ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:178:48: warning: logical 'or' applied to non-boolean constant [-Wlogical-op]</font><br />
-             if (GetAsyncKeyState (VK_OEM_PLUS) || (VK_ADD))<br />
-                                                ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:180:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:192:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].w_scr = centrPic[vybor].w_scr * 1.1;<br />
                                                                ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:181:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:193:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].h_scr = centrPic[vybor].h_scr * 1.1;<br />
                                                                ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:184:49: warning: logical 'or' applied to non-boolean constant [-Wlogical-op]</font><br />
-             if (GetAsyncKeyState (VK_OEM_MINUS) || (VK_SUBTRACT))<br />
-                                                 ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:186:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:198:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].w_scr = centrPic[vybor].w_scr * 0.9;<br />
                                                                ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:187:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:199:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].h_scr = centrPic[vybor].h_scr * 0.9;<br />
                                                                ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:77:10: warning: variable 'mouse_click' set but not used [-Wunused-but-set-variable]</font><br />
-     bool mouse_click = false;<br />
-          ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:209:1: warning: stack usage might be unbounded [-Wstack-usage=]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:207:48: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+                 centrPic[vybor].x = txMouseX() - centrPic[vybor].w_scr/2;<br />
+                                                ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:208:48: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+                 centrPic[vybor].y = txMouseY() - centrPic[vybor].h_scr/2;<br />
+                                                ^<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:235:1: warning: stack usage might be unbounded [-Wstack-usage=]</font><br />
  }<br />
  ^<br />
 ------------------------------------------------------------------------------------------------------<br />
 Autosaving to the Git repository in D:/ /clashofclans-main/.git-auto/... <br />
 Output size is 2,26 MB<br />
-<font color="#0000ff">Process terminated with status 0 (0 minutes, 13 seconds)</font><br />
-<font color="#0000ff">0 errors, 21 warnings (0 minutes, 13 seconds)</font><br />
+<font color="#0000ff">Process terminated with status 0 (0 minutes, 14 seconds)</font><br />
+<font color="#0000ff">0 errors, 19 warnings (0 minutes, 14 seconds)</font><br />
 </tt>
 </body>
 </html>
