--- a/clash_build_log.html
+++ b/clash_build_log.html
@@ -4,65 +4,67 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>13-10-2023 at 19:46.50</u><br />
-Build ended on: <u>13-10-2023 at 19:47.04</u><p />
+Build started on: <u>16-10-2023 at 19:45.26</u><br />
+Build ended on: <u>16-10-2023 at 19:45.42</u><p />
 <b>-------------- Build: Debug in clash (compiler: NOT FOR PROJECTS! = MinGW GCC + Strict + Fast + Save (Requires Git))---------------</b><br />
 g++git-auto.bat "D:\пономарёв александр\clashofclans-main\main.cpp" -o bin\Debug\clash.exe -mwindows  -Wall -fexceptions  -g  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC<br />
 ------------------------------------------------------------------------------------------------------<br />
 Compilation ERRORS:<br />
 <br />
-D:\пономарёв александр\clashofclans-main\main.cpp: In constructor 'Button::Button()':<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:2:8: warning: 'Button::x' should be initialized in the member initialization list [-Weffc++]</font><br />
+In file included from D:\пономарёв александр\clashofclans-main\main.cpp:2:0:<br />
+D:\пономарёв александр\clashofclans-main\button.cpp: In constructor 'Button::Button()':<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\button.cpp:2:8: warning: 'Button::x' should be initialized in the member initialization list [-Weffc++]</font><br />
  struct Button<br />
         ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:2:8: warning: 'Button::name' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:2:8: warning: 'Button::category' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\button.cpp:2:8: warning: 'Button::name' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\button.cpp:2:8: warning: 'Button::category' should be initialized in the member initialization list [-Weffc++]</font><br />
 D:\пономарёв александр\clashofclans-main\main.cpp: In function 'int main()':<br />
-D:\пономарёв александр\clashofclans-main\main.cpp:64:25: note: synthesized method 'Button::Button()' first required here <br />
+D:\пономарёв александр\clashofclans-main\main.cpp:11:25: note: synthesized method 'Button::Button()' first required here <br />
      Button btn[count_btn];<br />
                          ^<br />
-D:\пономарёв александр\clashofclans-main\main.cpp: In constructor 'Picture::Picture()':<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::x' should be initialized in the member initialization list [-Weffc++]</font><br />
+In file included from D:\пономарёв александр\clashofclans-main\main.cpp:3:0:<br />
+D:\пономарёв александр\clashofclans-main\picture.cpp: In constructor 'Picture::Picture()':<br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\picture.cpp:2:8: warning: 'Picture::x' should be initialized in the member initialization list [-Weffc++]</font><br />
  struct Picture<br />
         ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::y' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::pic' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::w_scr' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::h_scr' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::w' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::h' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::visible' should be initialized in the member initialization list [-Weffc++]</font><br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:29:8: warning: 'Picture::category' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\picture.cpp:2:8: warning: 'Picture::y' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\picture.cpp:2:8: warning: 'Picture::pic' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\picture.cpp:2:8: warning: 'Picture::w_scr' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\picture.cpp:2:8: warning: 'Picture::h_scr' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\picture.cpp:2:8: warning: 'Picture::w' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\picture.cpp:2:8: warning: 'Picture::h' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\picture.cpp:2:8: warning: 'Picture::visible' should be initialized in the member initialization list [-Weffc++]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\picture.cpp:2:8: warning: 'Picture::category' should be initialized in the member initialization list [-Weffc++]</font><br />
 D:\пономарёв александр\clashofclans-main\main.cpp: In function 'int main()':<br />
-D:\пономарёв александр\clashofclans-main\main.cpp:68:30: note: synthesized method 'Picture::Picture()' first required here <br />
+D:\пономарёв александр\clashofclans-main\main.cpp:15:30: note: synthesized method 'Picture::Picture()' first required here <br />
      Picture menuPic[count_pic];<br />
                               ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:192:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:125:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].w_scr = centrPic[vybor].w_scr * 1.1;<br />
                                                                ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:193:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:126:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].h_scr = centrPic[vybor].h_scr * 1.1;<br />
                                                                ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:198:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:131:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].w_scr = centrPic[vybor].w_scr * 0.9;<br />
                                                                ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:199:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:132:63: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].h_scr = centrPic[vybor].h_scr * 0.9;<br />
                                                                ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:207:48: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:140:48: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].x = txMouseX() - centrPic[vybor].w_scr/2;<br />
                                                 ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:208:48: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:141:48: warning: conversion to 'int' from 'double' may alter its value [-Wconversion]</font><br />
                  centrPic[vybor].y = txMouseY() - centrPic[vybor].h_scr/2;<br />
                                                 ^<br />
-<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:235:1: warning: stack usage might be unbounded [-Wstack-usage=]</font><br />
+<font color="#0000ff">D:\пономарёв александр\clashofclans-main\main.cpp:168:1: warning: stack usage might be unbounded [-Wstack-usage=]</font><br />
  }<br />
  ^<br />
 ------------------------------------------------------------------------------------------------------<br />
 Autosaving to the Git repository in D:/ /clashofclans-main/.git-auto/... <br />
 Output size is 2,26 MB<br />
-<font color="#0000ff">Process terminated with status 0 (0 minutes, 14 seconds)</font><br />
-<font color="#0000ff">0 errors, 19 warnings (0 minutes, 14 seconds)</font><br />
+<font color="#0000ff">Process terminated with status 0 (0 minutes, 15 seconds)</font><br />
+<font color="#0000ff">0 errors, 19 warnings (0 minutes, 15 seconds)</font><br />
 </tt>
 </body>
 </html>
